# cubix-cpp

./: .gitignore  CMakeLists.txt  README.md
src/: config.hpp.in
src/core/: config.hpp.in  context.cpp  context.hpp  events.cpp  events.hpp  keycode.hpp  window.cpp  window.hpp
src/game/: main.cpp
